Add the pong game

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,13 @@
         <video id="video" width="640" height="480" autoplay></video>
         <canvas id="overlay" width="640" height="480"></canvas>
         <canvas id="photo" width="640" height="480"></canvas>
+
+        <canvas id="game"></canvas>
+
         <div id="coords"></div>
+
         <script src="lib/face-api.js"></script>
+        <script src="lib/pong.js"></script>
         <script src="app.js"></script>
     </body>
 </html>
